--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^1.7.9",
     "dotenv": "^16.4.7",
+    "framer-motion": "^12.23.24",
     "lucide-react": "^0.484.0",
     "next": "^15.2.4",
     "react": "^19.0.0",
