--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
     "dev": "node scripts/start-dev.mjs",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "setup": "node scripts/setup-env.mjs"
+    "setup": "node scripts/setup-env.mjs",
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
+    "format": "prettier --write ."
   },
   "dependencies": {
     "axios": "^1.7.9",
@@ -15,10 +16,12 @@
     "lucide-react": "^0.484.0",
     "next": "^16.0.2-canary.14",
     "react": "^19.2.0",
-    "react-dom": "^19.2.0"
+    "react-dom": "^19.2.0",
+    "typescript-eslint": "^8.46.4"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
+    "@eslint/eslintrc": "^3.3.1",
+    "@eslint/js": "^9.39.1",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
